<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText" />

    <Button
        android:id="@+id/Chatbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChatButton" />

    <Button
        android:id="@+id/WeatherForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WeatherForecast" />


</LinearLayout>